﻿Version 1.12.2
- BUG: Exporting files from the log dialog
       stopped at deleted entries. (Stefan)

Version 1.12.1
- BUG: Crash in the repo browser if externals
       with relative paths were present. (Stefan)
- BUG: "save as..." from the log dialog saved
       the file with an escaped name. (Stefan)
- BUG: When parsing SVNParentPath pages, the
       urls were not properly escaped. (Stefan)
- BUG: Context menu in TMerge didn't show up
       on secondary monitors. (Stefan)

Version 1.12.0
- BUG: Ignoring comments in TMerge could
       lead to memory exhaustion. (Stefan)

Version 1.11.1
- BUG: Diffing from the log dialog failed
       if the repository name itself
       contained non-ASCII chars. (Stefan)

Version 1.11.0
- BUG: Display issues in the log dialog when
       resizing the dialog. (Stefan)
- CHG: splitter positions saved separately
       for log dialog and project monitor. (Stefan)
- CHG: Restored files get their last-write-time
       set to the current time. (Stefan)
- BUG: When merging, the copyfrom revision was
       shown as eligible for merging. (Stefan)
- BUG: long paths in the conflict dialogs were
       cut off instead of properly shortened. (Stefan)

Version 1.10.1
- BUG: Wrong texts in conflict resolving
       dialogs. (Stefan)
- BUG: Shelving from TSVN dialogs returned
       an error. (Stefan)
- BUG: Crash when trying to unshelve from
       an outdated or corrupted working copy. (Stefan)
- CHG: Improved project monitor toolbar for
       high dpi monitors. (Stefan)
- CHG: Various improvements for
       high-dpi monitors. (Stefan)
- BUG: Wrong titles when editing a conflict. (Stefan)
- BUG: Unshelving failed when the shelve name
       contained non-ASCII chars. (Stefan)
- BUG: Showing the log if the repo url contained
       special chars sometimes failed. (Stefan)
- BUG: Wrong behavior for 'lock' error. (Patrick Steinhardt)
- CHG: Improved labels and text in dialog when
       creating a copy in repo browser. (Stefan)