@@ -1,6 +1,8 @@
 ﻿Version 1.12.2
 - BUG: Exporting files from the log dialog
        stopped at deleted entries. (Stefan)
+- BUG: the word/excel diff scripts allowed
+       macros to be executed. (Stefan)
 
 Version 1.12.1
 - BUG: Crash in the repo browser if externals
